--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         .container{
             display: block;
         }
+            .img{
+            display: none;
+        }
         }
     </style>
     <center>
