--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         
             <section style=" backdrop-filter: blur(10px)">
                 <h1 style="color: white;">HISTORY</h1>
-                <section style="margin-bottom: 40PX; color: white;" id="history">Nothing Yet</section>
+                <section style="margin-bottom: 40PX; color: white;" id="history"></section>
                 <button id="songPlay" style="margin-bottom: 30px;" class="clearHistory">CLEAR ALL</button>
             </section>
     </center>
